@@ -1,3 +1,13 @@
+2011-05-30  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/datafile.c (df_open df_determine_matrix_info):
+	Add a keyword '[s]plot ... nonuniform matrix'
+	This provides an ascii input option parallel to 'binary matrix'.
+	nonuniform matrix:  ascii;  y coords in row 1, x coords in column 1
+	binary matrix:	    binary; y coords in row 1, x coords in column 1
+	matrix:             ascii;  uniform grid of x/y coords
+	binary general:     binary; uniform grid of x/y coords
+
 2011-05-09  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* term/eepic.trm:  New terminal option {size XX,YY}
